# formal-iss

./: README.md  cabal.project  formal-iss.cabal
.githooks/: pre-commit
src/: Bindings.hs  Executor.hs  Expression.hs  Generator.hs  Interface.hs  Main.hs  Statement.hs  Util.hs
