cabal-version:   3.4
name:            formal-iss
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          Sören Tempel
maintainer:      tempel@uni-bremen.de
category:        Development
build-type:      Simple

common warnings
    ghc-options: -Wall

executable formal-iss
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   src
    default-language: GHC2021

    other-modules:    Generator
                    , Bindings
                    , Interface
                    , Executor

    build-depends:    base         ^>= 4.17.0.0
                    , libriscv     ^>= 0.1.0.0
                    , language-c   ^>= 0.9.2
                    , freer-simple ^>= 1.2.1.2
                    , containers   ^>= 0.6.7
                    , conversion   ^>= 1.2.1
